summative.moria.Moria.scala.error
Compilation error:
Moria:8: error: not found: value trouveRocher
    trouveRocher()
    ^